@@ -11,8 +11,8 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="common/phetcommon/css/phetcommon.css"/>
-    <link rel="stylesheet" href="contrib/bootstrap-2.2.1/css/bootstrap.css"/>
-    <link rel="stylesheet" href="contrib/bootstrap-2.2.1/css/bootstrap-responsive.css"/>
+    <!--<link rel="stylesheet" href="contrib/bootstrap-2.2.1/css/bootstrap.css"/>-->
+    <!--<link rel="stylesheet" href="contrib/bootstrap-2.2.1/css/bootstrap-responsive.css"/>-->
     <link rel="stylesheet" href="css/example-sim.css"/>
 
     <!-- jquery must be loaded here -->
