@@ -5,6 +5,7 @@
 
     <!-- Use a separate label so that clicking on the label fires the check box. -->
     <label class=control-panel-label><input type="checkbox" name="ShowFrameRateCheckBox" value="showFrameRate" /><%= showFrameRate %></label>
+    <br/>
 
     <!-- Flip Polarity button -->
     <button type="button" class=cp-button id="flipPolarityButton"><%= flipPolarity %></button>
