@@ -1,3 +1,4 @@
+2/13/13 Made the millisecond counter for the FPS indicator work.  Broke out the animation loop to make this happen.
 2/12/13 add missing README files, doc
 2/12/13 fix control panel i18n by passing strings to ControlPanel.init
 2/12/13 add French strings for control panel
